Changelog
=========


1.0.1 (unreleased)
------------------

- Rework styling based on ftw.theming
  [Kevin Bieri]

- get_creator should no fail if the user no longer exists.
  [mathias.leimgruber]

- Eliminate declaration warning for nonexistent methods.
  [jone]

- Do not show ftw.news.News in navigation by default.
  [elioschmutz]

- Apply styling based on new ftw.theming variables set.
  - Remove `read more` link becuase the link of the heading has the same target
    so the `read more` link is obsolete.
  [Kevin Bieri]

- Implement newslistingblock listing styles + Convert to html list. This has now the same styles as the regular newslisting.
  [mathias.leimgruber]

- Implement news portlet styles.
  [mathias.leimgruber]

- Implement news listing styles.
  [mathias.leimgruber]

- Convert newslisting into a html list for the sake of accessibility.
  [mathias.leimgruber]

1.0.0 (2015-12-04)
------------------

- Nothing changed yet