@@ -1,7 +1,0 @@
-jQuery(function($){
-    $(document).ready(function(){
-        $('.portletArchiveListing .year span.yearnumber').click(function() {
-            $(this).parent().toggleClass('expanded');
-        });
-    });
-});
