@@ -5,6 +5,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+- Implement accessibility support for archive portlet tree.
+  [Kevin Bieri]
+
 - Rework styling based on ftw.theming
   [Kevin Bieri]
 
